kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: react-milano-demo
  namespace: react-milano-demo
spec:
  rules:
    - host: react-milano.dev.ludusrusso.space
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: react-milano-demo
                port:
                  number: 8080
  tls:
    - hosts:
        - react-milano.dev.ludusrusso.space 
      secretName: react-milano.dev.ludusrusso.space-tls
